[1.353] sync, OpenSSH 8.4 - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -54,8 +54,8 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.3">OpenSSH 8.3</a>
-состоялся 27 мая 2020 года.<br>
+Релиз <a href="https://www.openbsd.org/openssh/txt/release-8.4">OpenSSH 8.4</a>
+состоялся 27 сентября 2020 года.<br>
 
 <p>
 OpenSSH это основной инструмент для создания соединений
