--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -3,7 +3,7 @@
 	<meta charset=utf-8>
 	<title>OpenNTPD</title>
 	<meta name="description" content="the main OpenNTPD page">
-	<link rel="canonical" href="http://www.openntpd.org/">
+	<link rel="canonical" href="https://www.openntpd.org/">
 	<link rel="stylesheet" href="openbsd.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
