--- a/openntpd/goals.html
+++ b/openntpd/goals.html
@@ -6,7 +6,7 @@
 <meta name="description" content="OpenNTPD Goals">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.openntpd.org/goals.html">
+<link rel="canonical" href="https://www.openntpd.org/goals.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
