[1.18] sync, using https - openntpd/features.html

--- a/openntpd/features.html
+++ b/openntpd/features.html
@@ -6,7 +6,7 @@
 <meta name="description" content="OpenNTPD Features">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.openntpd.org/features.html">
+<link rel="canonical" href="https://www.openntpd.org/features.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
