--- a/openntpd/papers.html
+++ b/openntpd/papers.html
@@ -6,7 +6,7 @@
 <meta name="description" content="OpenNTPD related papers and presentations">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.openntpd.org/papers.html">
+<link rel="canonical" href="https://www.openntpd.org/papers.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
@@ -21,8 +21,8 @@
 <a href="https://quigon.bsws.de/papers/21c3/">OpenBGPD и OpenNTPD</a>,
 by Henning Brauer</strong><br>
 Доклад о двух проектах
-<a href="http://www.openbgpd.org/">OpenBGPD</a> и
-<a href="http://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
+<a href="https://www.openbgpd.org/">OpenBGPD</a> и
+<a href="https://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
 <a href="https://events.ccc.de/congress/2004/">21. Chaos Communication Congress</a>
 в Берлине (ФРГ) в декабре 2004 года.
 </blockquote>
@@ -33,7 +33,7 @@ by Henning Brauer</strong><br>
 <a href="https://quigon.bsws.de/papers/opencon04/ntpd/">OpenNTPD</a>,
 by Henning Brauer</strong><br>
 Доклад о
-<a href="http://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
+<a href="https://www.openntpd.org/">OpenNTPD</a>, который был прочитан на
 <a href="https://web.archive.org/web/20041210140852/http://www.opencon.org/">OpenCon 2004</a>
 в Венции (Италия) в декабре 2004 года.
 </blockquote>
@@ -44,10 +44,10 @@ by Henning Brauer</strong><br>
 <a href="https://www.openbsd.org/papers/ntpd_sucon04/">OpenNTPD</a>,
 by Henning Brauer
 </strong><br>
-Доклад о <a href="http://www.openntpd.org/">OpenNTPD</a> был прочитан на
+Доклад о <a href="https://www.openntpd.org/">OpenNTPD</a> был прочитан на
 <a href="https://web.archive.org/web/20040812043217/http://www.suug.ch/sucon/04/">SUCON 04</a>
 в Цюрихе (Швейцария) в сентябре 2004 года. Там описываются детали реализации
-<a href="http://www.openntpd.org/">OpenNTPD</a>.
-<a href="http://www.openbsd.org/papers/ntpd_sucon04.tgz">Архив</a> презентации
+<a href="https://www.openntpd.org/">OpenNTPD</a>.
+<a href="https://www.openbsd.org/papers/ntpd_sucon04.tgz">Архив</a> презентации
 для просмотра в оффлайн.
 </blockquote>
