--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -6,7 +6,7 @@
 <meta name="description" content="OpenNTPD Manual Pages">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
-<link rel="canonical" href="http://www.openntpd.org/manual.html">
+<link rel="canonical" href="https://www.openntpd.org/manual.html">
 
 <h2 id=OpenBSD>
 <a href="index.html">
