[1.540] sync, OpenBSD 6.8 - faq/faq4.html

--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -119,18 +119,18 @@ boot> <b>boot hd1d:/bsd.rd</b>
 	  если вы используете одну из архитектур, отличных от x86. Они содержат
 	  подробные инструкции и предостережения:
           <p>
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/alpha/INSTALL.alpha">alpha</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/amd64/INSTALL.amd64">amd64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/arm64/INSTALL.arm64">arm64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/armv7/INSTALL.armv7">armv7</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/hppa/INSTALL.hppa">hppa</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/i386/INSTALL.i386">i386</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/landisk/INSTALL.landisk">landisk</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/loongson/INSTALL.loongson">loongson</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/luna88k/INSTALL.luna88k">luna88k</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/macppc/INSTALL.macppc">macppc</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/octeon/INSTALL.octeon">octeon</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/sparc64/INSTALL.sparc64">sparc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/alpha/INSTALL.alpha">alpha</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/amd64/INSTALL.amd64">amd64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/arm64/INSTALL.arm64">arm64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/armv7/INSTALL.armv7">armv7</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/hppa/INSTALL.hppa">hppa</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/i386/INSTALL.i386">i386</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/landisk/INSTALL.landisk">landisk</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/loongson/INSTALL.loongson">loongson</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/luna88k/INSTALL.luna88k">luna88k</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/macppc/INSTALL.macppc">macppc</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/octeon/INSTALL.octeon">octeon</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/sparc64/INSTALL.sparc64">sparc64</a>]
       <li>Если досуп к сети в вашем случае возможен только через wireless, узнайте
 	  заранее, требует ли ваша карта
 	  <a href="http://firmware.openbsd.org/firmware">дополнительной прошивки</a>?
@@ -164,9 +164,9 @@ boot> <b>boot hd1d:/bsd.rd</b>
 
 <ul>
 <li>
-<b>installXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/install67.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/install67.fs">i386</a>]
+<b>installXX.img</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/amd64/install68.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/i386/install68.img">i386</a>]
 <br>
 Образ диска, который может быть записан на USB флешку или подобное устройство.
 <br>
@@ -174,18 +174,18 @@ boot> <b>boot hd1d:/bsd.rd</b>
 
 <p>
 <li>
-<b>minirootXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/miniroot67.fs">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/miniroot67.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/arm64/miniroot67.fs">arm64</a>]
+<b>minirootXX.img</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/alpha/miniroot68.img">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/amd64/miniroot68.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/arm64/miniroot68.img">arm64</a>]
 <!-- armv7 has multiple miniroot files for different boards -->
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/armv7/">armv7</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/miniroot67.fs">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/landisk/miniroot67.fs">landisk</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/loongson/miniroot67.fs">loongson</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/luna88k/miniroot67.fs">luna88k</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/octeon/miniroot67.fs">octeon</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/miniroot67.fs">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/armv7/">armv7</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/i386/miniroot68.img">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/landisk/miniroot68.img">landisk</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/loongson/miniroot68.img">loongson</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/luna88k/miniroot68.img">luna88k</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/octeon/miniroot68.img">octeon</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/miniroot68.img">sparc64</a>]
 <br>
 Это такой же образ, как и образ выше, но файлов, содержащих установочные компоненты,
 там нет. Они могут быть во время установки системы загруженны из сети или найдены на
@@ -194,12 +194,12 @@ boot> <b>boot hd1d:/bsd.rd</b>
 <p>
 <li>
 <b>installXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/install67.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/install67.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/hppa/install67.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/install67.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/macppc/install67.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/install67.iso">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/alpha/install68.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/amd64/install68.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/hppa/install68.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/i386/install68.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/macppc/install68.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/install68.iso">sparc64</a>]
 <br>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
 <br>
@@ -208,21 +208,21 @@ ISO 9660 образ. Используется для создания устан
 <p>
 <li>
 <b>cdXX.iso</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/alpha/cd67.iso">alpha</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/cd67.iso">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/hppa/cd67.iso">hppa</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/cd67.iso">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/macppc/cd67.iso">macppc</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/cd67.iso">sparc64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/alpha/cd68.iso">alpha</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/amd64/cd68.iso">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/hppa/cd68.iso">hppa</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/i386/cd68.iso">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/macppc/cd68.iso">macppc</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/cd68.iso">sparc64</a>]
 <br>
 Такой же образ как и образ выше, но без файлов с установочными компонентами.
 
 <p>
 <li>
-<b>floppyXX.fs</b>
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/amd64/floppy67.fs">amd64</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/i386/floppy67.fs">i386</a>]
-[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.7/sparc64/floppy67.fs">sparc64</a>]
+<b>floppyXX.img</b>
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/amd64/floppy68.img">amd64</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/i386/floppy68.img">i386</a>]
+[<a href="https://cdn.openbsd.org/pub/OpenBSD/6.8/sparc64/floppy68.img">sparc64</a>]
 <br>
 Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
 </ul>
@@ -236,15 +236,15 @@ ISO 9660 образ. Используется для создания устан
 <a href="https://man.openbsd.org/sha256">sha256(1)</a>.
 
 <pre class="cmdbox">
-$ <b>sha256 -C SHA256 miniroot*.fs</b>
-(SHA256) minirootXX.fs: OK
+$ <b>sha256 -C SHA256 miniroot*.img</b>
+(SHA256) minirootXX.img: OK
 </pre>
 
 Если же вы используете ОС с GNU coreutils:
 
 <pre class="cmdbox">
 $ <b>sha256sum -c --ignore-missing SHA256</b>
-minirootXX.fs: OK
+minirootXX.img: OK
 </pre>
 
 Однако это используется лишь для проверки <i>правильной загрузки</i> файлов по сети.
@@ -252,18 +252,18 @@ minirootXX.fs: OK
 и файл <code>SHA256.sig</code> для криптографической проверки загруженного файла.
 
 <pre class="cmdbox">
-$ <b>signify -Cp /etc/signify/openbsd-XX-base.pub -x SHA256.sig miniroot*.fs</b>
+$ <b>signify -Cp /etc/signify/openbsd-XX-base.pub -x SHA256.sig miniroot*.img</b>
 Signature Verified
-minirootXX.fs: OK
+minirootXX.img: OK
 </pre>
 
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
-<a href="https://ftp.openbsd.org/pub/OpenBSD/6.7/openbsd-67-base.pub">открытого ключа</a>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/6.8/openbsd-68-base.pub">открытого ключа</a>
 или может быть установлен в другом месте.
 
 <p>
-Образы <code>installXX.iso</code> и <code>installXX.fs</code> не содержат файл
+Образы <code>installXX.iso</code> и <code>installXX.img</code> не содержат файл
 <code>SHA256.sig</code>, поэтому установщик пожалуется, что не может проверить
 подпись включенных файлов, которые содержат установочные компоненты:
 
@@ -289,7 +289,7 @@ Directory does not contain SHA256.sig. Continue without verification? [no]
 <code>sd6</code>:
 
 <pre class="cmdbox">
-# <b>dd if=install*.fs of=/dev/rsd6c bs=1m</b>
+# <b>dd if=install*.img of=/dev/rsd6c bs=1m</b>
 </pre>
 
 Обратите внимание, что используется <b>raw I/O device</b> <code>rsd6c</code>,
