[1.747] sync, OpenBSD 6.8 release - index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
 	<li><a href="faq/index.html">FAQ</a>
 	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata67.html">Патчи</a>
+	<li><a href="https://www.openbsd.org/errata68.html">Патчи</a>
 	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -66,8 +66,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/67.html">
-	<img src="images/puffy67.gif" height="198" width="599" alt="[OpenBSD 6.7]">
+	<a href="https://www.openbsd.org/68.html">
+	<img src="images/puffy68.gif" height="198" width="599" alt="[OpenBSD 6.8]">
 	</a>
 </h2>
 
@@ -93,8 +93,9 @@
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/67.html">OpenBSD 6.7</a>,
-вышла 19 мая 2020 года.
+<a href="https://www.openbsd.org/68.html">OpenBSD 6.8</a>,
+вышла 18 октября 2020 года.
+В этот день проект OpenBSD празднует свое 25 летие.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
