[1.45] sync, update 7.0 - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -217,10 +217,10 @@ time clock с питанием от батарейки, тем не менее, 
 </h3>
 
 <p>
-Последний поддерживаемая версия OpenBSD/arm64
-<a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.
+Последнeй поддерживаемой версией OpenBSD/arm64 является
+<a href="https://www.openbsd.org/70.html">OpenBSD 7.0</a>.
 Здесь вы можете найти
-<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/arm64/INSTALL.arm64">
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/arm64/INSTALL.arm64">
 инструкции по установке OpenBSD/arm64</a>.
 
 <p>
@@ -231,4 +231,3 @@ time clock с питанием от батарейки, тем не менее, 
 Тут описан процесс
 <a href="https://ftp.openbsd.org/pub/OpenBSD/snapshots/arm64/INSTALL.arm64">
 установки снапшота OpenBSD/arm64</a>.
-
