--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -12,7 +12,7 @@
 <i>Open</i><b>BSD</b></a>
 FAQ - Введение в OpenBSD
 <small>
-<a href="index.html">[FAQ список]</a>
+<a href="index.html">[FAQ - На главную]</a>
 </small>
 </h2>
 <hr>
@@ -129,14 +129,11 @@ OpenBSD работает на следующих <a href="../plat.html">плат
   <li><a href="https://www.openbsd.org/hppa.html"     >hppa</a>
   <li><a href="https://www.openbsd.org/i386.html"     >i386</a>
   <li><a href="https://www.openbsd.org/landisk.html"  >landisk</a>
-  <li><a href="https://www.openbsd.org/loongson.html" >loongson</a>
   <li><a href="https://www.openbsd.org/luna88k.html"  >luna88k</a>
   <li><a href="https://www.openbsd.org/macppc.html"   >macppc</a>
   <li><a href="https://www.openbsd.org/octeon.html"   >octeon</a>
   <li><a href="../powerpc64.html"                     >powerpc64</a>
-  <!--
-  <li><a href="../riscv64.html"   >riscv64</a>
-  -->
+  <li><a href="https://www.openbsd.org/riscv64.html"  >riscv64</a>
   <li><a href="https://www.openbsd.org/sparc64.html"  >sparc64</a>
 </ul>
 
@@ -190,9 +187,9 @@ OpenBSD поставляется с обширной документацией 
   - отправка сообщения об ошибке.
 </ul>
 
-Также вы можете найти все страницы руководства онлайн по адресу
-<a href="https://man.openbsd.org">man.openbsd.org</a> и локально
-на своём компьютере, если был установлен <code>manXX.tgz</code>.
+Полный набор man-страниц OpenBSD можно читать online на
+<a href="https://man.openbsd.org">man.openbsd.org</a>,
+а также их можно найти в архиве <code>man70.tgz</code>.
 
 <p>
 В общем, если вы знаете имя команды или страницы руководства, вы можете
