[1.390] sync - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -528,7 +528,7 @@ amd64, sparc64 и arm64.
 сделайте следующее в консоли:
 
 <pre class="cmdbox">
-Welcome to the OpenBSD/amd64 X.X installation program.
+Welcome to the OpenBSD/amd64 7.0 installation program.
 (I)nstall, (U)pgrade, (A)utoinstall or (S)hell? <b>s</b>
 # <b>cd /dev</b>
 # <b>sh MAKEDEV sd0 sd1 sd2</b>
@@ -652,13 +652,13 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 В этом разделе описан пример установки OpenBSD на один зашифрованный диск. Этот
 процесс очень похож на предыдущий. Обратите внимание, что в настоящее время
 «стекирование» режимов softraid <b>не поддерживается</b>.
-<!-- XXXrelease: mention RAIDC1 when booting support is added -->
+<!-- XXXrelease - mention RAIDC1 when booting support is added -->
 
 <p>
 Выберете <code>(S)hell</code> во время установки чтобы перейти в консоль.
 
 <pre class="cmdbox">
-Welcome to the OpenBSD/amd64 X.X installation program.
+Welcome to the OpenBSD/amd64 7.0 installation program.
 (I)nstall, (U)pgrade, (A)utoinstall or (S)hell? <b>s</b>
 </pre>
 
