[1.9] sync - powerpc64.html

--- a/powerpc64.html
+++ b/powerpc64.html
@@ -55,7 +55,7 @@ Systems Talos II и Blackbird. Поддержка процессоров POWER8 
 но не тестировалась.
 
 <p>
-OpenBSD / powerpc64 не работает под гипервизором, таким как PowerVM
+OpenBSD/powerpc64 не работает под гипервизором, таким как PowerVM
 или PowerKVM.
 
 <hr>
@@ -82,10 +82,10 @@ OpenBSD/powerpc64, как известно, работает на следующ
 </h3>
 
 <p>
-Последним поддерживаемым выпуском OpenBSD/powerpc64 является
-<a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>.
+Последней поддерживаемой версией OpenBSD/powerpc64 является
+<a href="https://www.openbsd.org/70.html">OpenBSD 7.0</a>.
 Вот
-<a href="https://ftp.openbsd.org/pub/OpenBSD/6.9/powerpc64/INSTALL.powerpc64">
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.0/powerpc64/INSTALL.powerpc64">
 инструкции по установке OpenBSD/powerpc64</a>.
 
 <p>
@@ -102,7 +102,7 @@ OpenBSD/powerpc64, как известно, работает на следующ
 можно установить или обновить через образы miniroot, а также установить по сети.
 
 <ul>
-  <li><strong>Miniroot</strong> (minirootXX.img)
+  <li><strong>Miniroot</strong> (miniroot70.img)
   <p>
   Miniroot обеспечивает простую среду установки. Просто запишите miniroot
   на флешку командой dd и вставьте ее в USB-слот машины. После включения машины
