--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<li><a href="https://www.openbsd.org/plus.html">Changelog</a>
 	<li><a href="faq/index.html">FAQ</a>
 	<li><a href="https://man.openbsd.org">Man-страницы</a>
-	<li><a href="https://www.openbsd.org/errata69.html">Патчи</a>
+	<li><a href="https://www.openbsd.org/errata70.html">Патчи</a>
 	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 	<li><a href="https://www.openbsd.org/lyrics.html">Песни</a> &amp;
@@ -67,8 +67,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/69.html">
-	<img src="images/puffy69.jpg" height="198" width="599" alt="[OpenBSD 6.9]">
+	<a href="https://www.openbsd.org/70.html">
+	<img src="images/puffy70.gif" height=198 width=599 alt="[OpenBSD 7.0]">
 	</a>
 </h2>
 
@@ -94,9 +94,9 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/69.html">OpenBSD 6.9</a>,
-вышла 1 мая 2021 года.
-Это 50'й релиз.
+<a href="https://www.openbsd.org/70.html">OpenBSD 7.0</a>,
+вышла 14 октября 2021 года.
+Это 51'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
